[metadata]
name = lbrc_flask_ui
description = Leicester BRC Flask UI Components and Theme
long_descripton = file: README.md
author = NIHR Leicester Biomedical Research Centre
author_email = rabramley@gmail.com
license = MIT
url = https://github.com/LCBRU
edit_on_github = True
github_project = LCBRU/lbrc_flask_ui
classifiers =
  'Programming Language :: Python'
  'Programming Language :: Python :: 3'
  'Programming Language :: Python :: 3.5'
  'Programming Language :: Python :: 3.6'
  'Programming Language :: Python :: 3.7'
  'Programming Language :: Python :: 3.8'
  'Development Status :: 4 - Beta'
  'Framework :: Flask :: 1.0'
  'Intended Audience :: Healthcare Industry'
  'Intended Audience :: Science/Research'
  'License :: OSI Approved :: MIT License'
  'Natural Language :: English'
  'Operating System :: OS Independent'
  'Topic :: Scientific/Engineering :: Bio-Informatics'


[options]
python_requires = >=3.5
packages = find:
include_package_data = True
setup_requires = setuptools_scm
install_requires =
  Flask
  flask_mail

[options.extras_require]
tests =
  pytest
  pytest-cov
  coverage
  Faker
  beautifulsoup4
docs =
  sphinx
